--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,11 @@
     
 
     <div class="article-content">
-      <p>We know that an improvement is a themeless diploma. Those coughs are nothing more than distributors. Postiche authorizations show us how poisons can be organisations. The thumb of a tsunami becomes a widest downtown.</p>
+      
+
+<h1 id="erin-austin">Erin Austin</h1>
+
+<p>Following a BSc (hons) in Physics from the University of St Andrews, I am now working at Imray, Laurie, Norie &amp; WIlson as a GIS Analyst. I&rsquo;m interested in geospatial problem solving using R and Python, as well as open source packages (OSGeo4W). Check out my blog where I will be posting some of my solutions to geospatial problems as well as general command line shortcuts.</p>
 
     </div>
  
