--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
 
 <h1 id="erin-austin">Erin Austin</h1>
 
-<p>Following a BSc (hons) in Physics from the University of St Andrews, I am now working at Imray, Laurie, Norie &amp; WIlson as a GIS Analyst. I&rsquo;m interested in geospatial problem solving using R and Python, as well as open source packages (OSGeo4W). Check out my blog where I will be posting some of my solutions to geospatial problems as well as general command line shortcuts.</p>
+<p align="left"><img src="/images/erin.jpeg" align="left" width="300" style="padding-right:20px;padding-top:10px;padding-bottom:20px;"> Following a BSc (hons) in Physics from the University of St Andrews, I am now working at Imray, Laurie, Norie & WIlson as a GIS Analyst. I'm interested in geospatial problem solving using R and Python, as well as open source packages (OSGeo4W). Check out my blog where I will be posting some of my solutions to geospatial problems as well as general command line shortcuts.</p>
 
     </div>
  
