--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
 
 <h1 id="erin-austin">Erin Austin</h1>
 
-<p><img src="/images/erin.jpeg" align="right" width="300" style="padding-left:20px;padding-top:10px;padding-bottom:20px;"> Following graduating with a BSc in Physics from the University of St Andrews in 2016 and a few years working with geospatial data and navigation apps as a product owner, I am now moving into the world of software development as a Graduate Test Engineer for <a href="//https://www.scottlogic.com/">Scott Logic</a> in Newcastle.</p>
+<p><img src="/images/erin.jpeg" align="right" width="300" style="padding-left:20px;padding-top:10px;padding-bottom:20px;"> Following graduating with a BSc in Physics from the University of St Andrews in 2016 and a few years working with geospatial data and navigation apps as a product owner, I am now moving into the world of software development as a Graduate Test Engineer for <a href="//www.scottlogic.com/">Scott Logic</a> in Newcastle.</p>
 
 <p>This is my personal blog where I post sporadically about solutions to problems I&rsquo;ve found particularly challenging. Feel free to visit my <a href="//github.com/ostens">github</a> or contact me via <a href="mailto:erinjayaustin@gmail.com">email</a>.</p>
 
