Update about me

--- a/about/index.html
+++ b/about/index.html
@@ -58,9 +58,9 @@
 
 <h1 id="erin-austin">Erin Austin</h1>
 
-<p><img src="/images/erin.jpeg" align="right" width="300" style="padding-left:20px;padding-top:10px;padding-bottom:20px;"> Following graduating with a BSc in Physics from the University of St Andrews in 2016 and a few years working with geospatial data and navigation apps as a product owner, I am now moving into the world of software development as a Graduate Test Engineer for <a href="//www.scottlogic.com/">Scott Logic</a> in Newcastle.</p>
+<p><img src="/images/erin.jpeg" align="right" width="300" style="padding-left:20px;padding-top:10px;padding-bottom:20px;"> Following a BSc (hons) in Physics from the University of St Andrews, I started working at Imray, Laurie, Norie & Wilson as a digital product coordinator, which involved everything from product ownership of iOS and Android apps, to geospatial data processing, to product support.</p>
 
-<p>This is my personal blog where I post sporadically about solutions to problems I&rsquo;ve found particularly challenging. Feel free to visit my <a href="//github.com/ostens">github</a> or contact me via <a href="mailto:erinjayaustin@gmail.com">email</a>.</p>
+<p>I wanted to explore more technical pursuits and moved to the North East where I started working as a Software Test Engineer, before moving to a new company specialising in accounting software and moving back to a product owner role. Determined this time to get back to what I love the most, I am embarking on a software development bootcamp at Northcoders and hoping to continue to add sporadic posts here about what I learn!</p>
 
     </div>
  
